link to JS file now correct

--- a/demo.html
+++ b/demo.html
@@ -6,6 +6,6 @@
 <body>
 <p>Check the browser console, on every hour you will see the word 'boing' appear as many times as the actual hour.</p>
 <p>Be patient, you will have to wait an hour maximum :-)</p>
-<script src="clockify.js"></script>
+<script src="korClock.js"></script>
 </body>
 </html>
