--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Clockify demo</title>
+    <title>korClock demo</title>
 </head>
 <body>
 <p>The clock strikes every hour.</p>
