--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>korClock demo</title>
 </head>
 <body>
+<p><a href="https://github.com/kordwarshuis/korClock">Check source on Github</a></p>
 <p>The clock strikes every hour.</p>
 <p>Be patient, you will have to wait an hour maximum.</p>
 <audio preload="auto" controls>
